Implement mention filter
